# audio_enhancement

./: .gitignore  README.md  data  main.py  pyproject.toml  setup.py
models/: FLowHigh_inference.py  FlashSR_inference.py  VAudioSR_inference.py
models/BigVGAN/: models.py  utils.py
models/audiosr/: __main__.py  pipeline.py  utils.py
models/audiosr/clap/training/: data.py
models/audiosr/latent_diffusion/: util.py
models/audiosr/latent_diffusion/models/: ddim.py  ddpm.py  plms.py
models/audiosr/latent_diffusion/modules/: attention.py
models/audiosr/latent_diffusion/modules/audiomae/: AudioMAE.py  models_mae.py
models/audiosr/latent_diffusion/modules/diffusionmodules/: model.py  openaimodel.py  util.py
models/audiosr/latent_diffusion/modules/encoders/: modules.py
models/audiosr/latent_diffusion/modules/phoneme_encoder/: attentions.py  encoder.py
models/audiosr/latent_diffusion/modules/phoneme_encoder/text/: __init__.py
models/audiosr/latent_encoder/: autoencoder.py
models/audiosr/utilities/: model.py
models/audiosr/utilities/audio/: stft.py  tools.py
models/rAI_FLowHigh/: __init__.py  cfm_superresolution.py  flowhighsr.py
models/rAI_FLowHigh/models/: attend.py  flow.py  melvoco.py  pos_emb.py  transformer.py
models/rAI_FLowHigh/models/bigvgan/: inference.py  init_vocoder.py  meldataset.py  models.py  utils.py
models/rAI_FLowHigh/models/bigvgan/alias_free_torch/: __init__.py  act.py  resample.py
models/rAI_FLowHigh/train/: train.py  trainer.py
notebooks/: pyaudio_tutorial_1.ipynb  pyaudio_tutorial_2.ipynb  sounddevice_tutorial.ipynb
src/: FLowHigh_inference.py  benchmarking_collection.py  callback_func.py  data_prep.py  sd_plot_input.py  sounddevice_callback_loop.py  utility.py
